spacing issue fix
spacing issue fix

--- a/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
+++ b/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
@@ -879,7 +879,7 @@
       margin-top: 0;
       margin-right: 0;
       @media only screen and (min-width: 1540px) {
-        margin-right: -15px;
+        // margin-right: -15px;
       }
       .icons {
         text-align: center;
